<resources>
    <string name="app_name">WatchApp</string>
    <string name="title">Время в разных странах</string>
    <string name="title2">Погода в Москве</string>
    <string name="title4">Разноцветные часы</string>
    <string name="today">Сегодня</string>
    <string name="btn1">Франция</string>
    <string name="btn2">Россия</string>
    <string name="btn3">Китай</string>
    <string name="btn4">Япония</string>
    <string name="btn5">Назад</string>
    <string name="btn6">Вперед</string>
    <string name="nine">09:00</string>
    <string name="ten">10:00</string>
    <string name="eleven">11:00</string>
    <string name="cloudy">Облачно</string>
    <string name="sunny">Ясно</string>

</resources>