<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:gravity="top"
        android:paddingTop="16.dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <com.example.watchapp.customviews.RoundClockView
        android:id="@+id/clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="8.dp">
            <Button
                android:id="@+id/france_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn1"/>
            <Button
                android:id="@+id/russia_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="8.dp">
            <Button
                android:id="@+id/china_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn3"/>
            <Button
                android:id="@+id/japan_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn4"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="275dp">
        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/btn5"
            />
        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/btn6"
            />
    </LinearLayout>

</LinearLayout>