<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title2"
        android:paddingTop="16dp"
        android:gravity="center"
        android:textSize="34sp"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingHorizontal="16dp">

        <com.example.watchapp.customviews.RoundClockView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:paddingTop="16dp"
                android:text="@string/today"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/today_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:paddingTop="16dp"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="95dp"
                android:layout_height="75dp"
                android:src="@drawable/baseline_wb_cloudy_24"/>
            <ImageView
                android:layout_width="95dp"
                android:layout_height="75dp"
                android:src="@drawable/baseline_wb_sunny_24"/>
            <ImageView
                android:layout_width="95dp"
                android:layout_height="75dp"
                android:src="@drawable/baseline_wb_cloudy_24"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.2"
            android:paddingHorizontal="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:textSize="24sp"
                android:text="@string/nine"
                android:layout_gravity="center_vertical"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:textSize="24sp"
                android:text="@string/ten"
                android:layout_gravity="center_vertical"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:textSize="24sp"
                android:text="@string/eleven"
                android:layout_gravity="center_vertical"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:textSize="24sp"
                android:text="@string/cloudy"
                android:layout_gravity="center_vertical"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:textSize="24sp"
                android:text="@string/sunny"
                android:layout_gravity="center_vertical"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:textSize="24sp"
                android:text="@string/cloudy"
                android:layout_gravity="center_vertical"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="250dp">
        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/btn5"
            />
        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/btn6"
            />
    </LinearLayout>

</LinearLayout>