<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:gravity="top"
        android:paddingTop="16.dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title4"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.watchapp.customviews.RoundClockView
            android:id="@+id/clock1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <com.example.watchapp.customviews.RoundClockView
            android:id="@+id/clock2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.watchapp.customviews.RoundClockView
            android:id="@+id/clock3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <com.example.watchapp.customviews.RoundClockView
            android:id="@+id/clock4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/btn5"
            />
        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/btn6"
            />
    </LinearLayout>

</LinearLayout>